--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,11 +25,15 @@
         <item name="android:padding">14dp</item>
         <item name="android:drawablePadding">10dp</item>
         <item name="android:textSize">16sp</item>
-
         <item name="android:drawableTint">@color/color_default</item>
-
-
-
         <item name="android:windowBackground">@color/color_default</item>
+    </style>
+
+    <style name="BottomSheetDialog" parent="Theme.Design.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
+    </style>
+
+    <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
