--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.BankFinance" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.BankFinance" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
          <item name="colorPrimary">@color/color_default</item>
         <item name="android:windowBackground">@color/color_default</item>
@@ -15,7 +15,7 @@
         <!-- Opcional: Se a AppBar for translúcida ou flutuante, você pode precisar ajustar outros itens -->
     </style>
 
-    <style name="Theme.EditText" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.EditText" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:background">@drawable/bg_edit</item>
         <item name="android:layout_height">wrap_content</item>
